<resources>
  <string name="app_name">Currency Converter</string>

  <string name="main_activity_title">Currency Converter</string>
  <string name="info_activity_title">About</string>

  <string name="menu_action_about">About</string>
  <string name="menu_group_filters_title">Sort currencies</string>
  <string name="menu_action_sort_by_currency_name">By names</string>
  <string name="menu_action_sort_by_ascending_rate">By ascending rates</string>
  <string name="menu_action_sort_by_descending_rate">By descending rates</string>

  <string name="info_author_title">Author</string>
  <string name="info_author_desc">Currency Converter is an application by Marie-Anne Sinfreu.</string>
  <string name="info_credits_app_icon">App icon made by</string>
  <string name="info_credits_flags_icon">Country flags made by</string>
  <string name="info_credits_from">from</string>
  <string name="info_credits_title">Credits</string>

  <string name="error_unknown">An unknown error occurred.</string>
  <string name="error_no_network">Please check your internet connection.</string>
  <string name="error_invalid_response">The rate response is invalid.</string>
  <string name="error_currency_unavailable_db">The currency is not available. Check your internet connection.</string>

  <string name="flag_description">Currency flag</string>
  <string name="action_add_to_favorite">Add to favorites</string>
  <string name="info_credits_pin_icon">Pin icon made by</string>

  <string name="currency_name_not_found">Unknown currency</string>

  <string name="currency_name_AED">UAE Dirham</string>
  <string name="currency_name_AMD">Armenian DRM</string>
  <string name="currency_name_AUD">Australian Dollar</string>
  <string name="currency_name_AWG">Aruban Florin</string>
  <string name="currency_name_AZN">Azerbaijani Manat</string>
  <string name="currency_name_BAM">Bosnia &amp; Herzogovina Convertible Mark</string>
  <string name="currency_name_BDT">Bangladeshi Taka</string>
  <string name="currency_name_BGN">Bulgarian Lev</string>
  <string name="currency_name_BHD">Bahraini Dinar</string>
  <string name="currency_name_BMD">Bermudan Dollar</string>
  <string name="currency_name_BOB">Bolivian Bolivano</string>
  <string name="currency_name_BRL">Brazilian Real</string>
  <string name="currency_name_BYN">Belarusian Ruble</string>
  <string name="currency_name_BZD">Belize Dollar</string>
  <string name="currency_name_CAD">Canadian Dollar</string>
  <string name="currency_name_CHF">Swiss Franc</string>
  <string name="currency_name_CLP">Chilean Peso</string>
  <string name="currency_name_CNY">Chinese Yuan</string>
  <string name="currency_name_CUC">Cuban Convertible Peso</string>
  <string name="currency_name_CZK">Czech Koruna</string>
  <string name="currency_name_DKK">Danish Krone</string>
  <string name="currency_name_EGP">Egyptian Pound</string>
  <string name="currency_name_EUR">Euro</string>
  <string name="currency_name_GBP">Great Britain Pound Sterling</string>
  <string name="currency_name_GEL">Georgian Lari</string>
  <string name="currency_name_HKD">Hong Kong Dollar</string>
  <string name="currency_name_HRK">Croatian Kuna</string>
  <string name="currency_name_HTG">Haitian Gourd</string>
  <string name="currency_name_HUF">Hungarian Forint</string>
  <string name="currency_name_IDR">Indonesian Rupiah</string>
  <string name="currency_name_ILS">Israeli Shekel</string>
  <string name="currency_name_INR">Indian Rupee</string>
  <string name="currency_name_IQD">Iraqi Dinar</string>
  <string name="currency_name_IRR">Iranian Real</string>
  <string name="currency_name_ISK">Icelandic Krona</string>
  <string name="currency_name_JMD">Jamaican Dollar</string>
  <string name="currency_name_JPY">Japanese Yen</string>
  <string name="currency_name_KGS">Kyrgystani Som</string>
  <string name="currency_name_KHR">Cambodian Riel</string>
  <string name="currency_name_KRW">South Korean Won</string>
  <string name="currency_name_KZT">Khazakstani Tenge</string>
  <string name="currency_name_KWD">Kuwaiti Dinar</string>
  <string name="currency_name_LAK">Laotian Kip</string>
  <string name="currency_name_LBP">Lebanese Pound</string>
  <string name="currency_name_LKR">Sri Lankan Rupee</string>
  <string name="currency_name_MAD">Moroccan Dirham</string>
  <string name="currency_name_MDL">Moldovan Leu</string>
  <string name="currency_name_MKK">Myanmar Kyat</string>
  <string name="currency_name_MOP">Macau Pataca</string>
  <string name="currency_name_MXN">Mexican Peso</string>
  <string name="currency_name_MYR">Malaysian Ringgit</string>
  <string name="currency_name_NOK">Norwegian Krone</string>
  <string name="currency_name_NPR">Nepalese Rupee</string>
  <string name="currency_name_NZD">New Zealand Dollar</string>
  <string name="currency_name_OMR">Omani Real</string>
  <string name="currency_name_PHP">Philippine Piso</string>
  <string name="currency_name_PKR">Pakistani Rupee</string>
  <string name="currency_name_PLN">Polish Zloty</string>
  <string name="currency_name_PGK">Papua New Guinean Kina</string>
  <string name="currency_name_PYG">Paraguayan Guarani</string>
  <string name="currency_name_QAR">Qatari Rial</string>
  <string name="currency_name_RON">Romanian Leu</string>
  <string name="currency_name_RSD">Serbian Dinar</string>
  <string name="currency_name_RUB">Russian Ruble</string>
  <string name="currency_name_SAR">Saudi Riyal</string>
  <string name="currency_name_SEK">Swedish Krona</string>
  <string name="currency_name_SGD">Singapore Dollar</string>
  <string name="currency_name_THB">Thai Baht</string>
  <string name="currency_name_TJS">Tajikistan Somoni</string>
  <string name="currency_name_TMT">Turkmenistan Minat</string>
  <string name="currency_name_TND">Tunisian Dinar</string>
  <string name="currency_name_TRY">Turkish Lira</string>
  <string name="currency_name_TWD">Taiwanese New Dollar</string>
  <string name="currency_name_UAH">Ukrainian Hryvnia</string>
  <string name="currency_name_USD">United States Dollar</string>
  <string name="currency_name_UZS">Uzbekistani Som</string>
  <string name="currency_name_VND">Vietnamese Dong</string>
  <string name="currency_name_ZAR">South African Rand</string>
  <string name="action_dismiss">Dismiss</string>
</resources>
